[package]
name = "sam-utils"
version = "0.1.0"
edition = "2021"
authors = ["Magnus Trent <magnus@blackfall.dev>"]
license = "MIT"
repository = "https://github.com/Blackfall-Labs/sam-utils-rs"
description = "Shared utilities for SAM ecosystem: execution tracing and debugging"
keywords = ["sam", "debugging", "tracing", "utilities", "callgraph"]
categories = ["development-tools::debugging"]
readme = "README.md"
documentation = "https://docs.rs/sam-utils"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
